--- a/src/component/ItemList/itemList.scss
+++ b/src/component/ItemList/itemList.scss
@@ -9,19 +9,74 @@
 
   & .itemList .list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
     gap: 15px;
+    grid-template-columns: repeat(4, 1fr);
+
+    @media (max-width: 1300px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: 735px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
 
     & .item {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
+      flex-direction: column;
+      width: 10rem;
+      gap: 1rem;
+      border: 1px solid var(--secondary-color);
+      border-radius: 15px;
+      list-style: none;
+      height: fit-content;
 
-      & li {
-        color: antiquewhite;
-        font-weight: 700;
+      & .img_wrapper {
+        width: 100%;
+        height: 200px;
+        overflow: hidden;
+        border-radius: 5px 5px 0 0;
+        box-shadow: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      &_wrapper {
+        padding: 0.5rem;
+        height: fit-content;
+      }
+
+      &_title {
+        color: var(--primary-color);
+        font-weight: 500;
         font-size: 14px;
         font-family: "Arial Black", serif;
+      }
+
+      &_price {
+        color: lightcyan;
+      }
+
+      &_buttons {
+        display: flex;
+        gap: 1rem;
+        justify-content: flex-end;
+        height: 100%;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        justify-self: flex-end;
+        align-self: flex-end;
+        &_button {
+          width: 100%;
+          border-radius: 10px;
+          color: var(--primary-color);
+          &:first-child {
+            color: #888888;
+          }
+        }
       }
     }
   }
