--- a/src/component/Panier/panier.scss
+++ b/src/component/Panier/panier.scss
@@ -1,11 +1,14 @@
 .panier_container {
   width: 33vw;
   min-width: 300px;
-  height: 100%;
   justify-self: flex-start;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
   flex: 1;
+
+  @media (max-width: 725px) {
+    width: 100%;
+  }
 }
