--- a/src/component/Panier/panier.scss
+++ b/src/component/Panier/panier.scss
@@ -5,10 +5,26 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   flex: 1;
+  height: 100%;
+  transition: all .5s ease-in-out;
 
-  @media (max-width: 725px) {
+  & .toggle_button {
+    background: none;
+    color: var(--primary-color);
+    outline: none;
     width: 100%;
+  }
+
+  @media (max-width: 1200px) {
+    width: 100vw;
+    height: 10px;
+  }
+
+  &.open {
+    @media (max-width: 1200px) {
+      height: 400px;
+    }
   }
 }
