--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@
     -webkit-text-size-adjust: 100%;
     --primary-color: #646cff;
     --secondary-color: #213547;
+    --breakpoint-xl: 1200px;
+    --breakpoint-sm: 725px;
 }
 
 a {
